--- a/css/styles.css
+++ b/css/styles.css
@@ -131,17 +131,17 @@ button {
 
 a:focus, a:active, a:hover {
   text-decoration: none;
-  color: #FFA804;
+  color: #FFA600;
 }
 
 button:focus, button:active, button:hover {
   text-decoration: none;
-  color: #FFA804;
+  color: #FFA600;
 }
 
 a b.light-color:hover {
   text-decoration: none;
-  color: #FFA804;
+  color: #FFA600;
 }
 
 b {
@@ -233,7 +233,7 @@ b.max-bold {
   border-radius: 5px;
   margin-bottom: 20px;
   display: block;
-  background: #FFA804;
+  background: #FFA600;
 }
 
 .margin-t-10 {
@@ -274,7 +274,7 @@ b.max-bold {
 }
 
 .list > li:before {
-  border: 2px solid #FFAB00;
+  border: 2px solid #FFA600;
 }
 
 /* ---------------------------------
@@ -291,7 +291,7 @@ header {
 header .heading-wrapper {
   border-radius: 5px;
   padding: 30px 40px 20px;
-  background: #FFAD01;
+  background: #FFA600;
   color: #fff;
 }
 
@@ -315,7 +315,7 @@ header .download-btn {
   margin-top: 30px;
   -webkit-box-shadow: inset 0 0px 4px rgba(0, 0, 0, 0.3);
           box-shadow: inset 0 0px 4px rgba(0, 0, 0, 0.3);
-  background: #FFAD01;
+  background: #FFA600;
   color: #fff;
   -webkit-transition: all .2s ease;
   transition: all .2s ease;
@@ -415,7 +415,7 @@ header .download-btn:hover {
   top: 0;
   z-index: -1;
   border-radius: 20px;
-  background: #FFA804;
+  background: #FFA600;
   -webkit-transition: all .2s ease;
   transition: all .2s ease;
   -webkit-transform: scale(0);
@@ -448,7 +448,7 @@ header .download-btn:hover {
 }
 
 .portfolio-section .portfolioFilter a.current {
-  color: #FFA804;
+  color: #FFA600;
 }
 
 .portfolio-section .portfolioContainer {
@@ -550,11 +550,11 @@ body.modal-open {
 
 #projectModal .curly-braces {
   margin: 0 1rem;
-  color: #FFA804;
+  color: #FFA600;
 }
 
 #projectModal .navbar-portfolio {
-  background: #FFAD01;
+  background: #FFA600;
   color: #fff !important;
   font-size: large;
   -webkit-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
@@ -617,6 +617,31 @@ body.modal-open {
   margin-top: 1rem;
 }
 
+.about-section .skills.single {
+  /*
+      li#teamwork:before{
+        content: url('https://alsado.ca/wp-content/themes/alsado/images/teamwork.svg');
+      }
+      li#innovate:before{
+        content: url('https://alsado.ca/wp-content/themes/alsado/images/innovate.svg');
+      }
+      li#communication:before{
+        content: url('https://alsado.ca/wp-content/themes/alsado/images/communication.svg');
+      }
+      li#learning:before{
+        content: url('https://alsado.ca/wp-content/themes/alsado/images/learning.svg');
+      }
+      li:before{
+        content: '';
+        position: relative;
+        right: 0;
+        top: 5px;
+        width: 50px;
+        height: 50px;
+        transform: scale(1.4);
+      }*/
+}
+
 .about-section .skills.single .strength {
   margin: auto;
 }
@@ -631,6 +656,8 @@ body.modal-open {
           flex-direction: row;
   padding: 8px;
   border-radius: 5px;
+  height: 40px;
+  overflow: hidden;
 }
 
 .about-section .skills li:hover {
@@ -644,7 +671,7 @@ body.modal-open {
 }
 
 .about-section .skills li .strength {
-  color: #FFAD01;
+  color: #FFA600;
 }
 
 /* ---------------------------------
@@ -700,7 +727,7 @@ body.modal-open {
   z-index: 1;
   -webkit-box-shadow: 0 0 0 8px rgba(255, 171, 0, 0.4);
           box-shadow: 0 0 0 8px rgba(255, 171, 0, 0.4);
-  background: #FFAB00;
+  background: #FFA600;
 }
 
 /* ---------------------------------
@@ -788,12 +815,12 @@ body.modal-open {
 }
 
 .navbar-home .navbar-nav li.active a {
-  background: #FFAD01;
+  background: #FFA600;
   color: #FFFFFF;
 }
 
 .navbar-home .navbar-nav li.active a:hover, .navbar-home .navbar-nav li.active a:focus {
-  background: #FFAD01;
+  background: #FFA600;
   color: #FFFFFF;
 }
 
@@ -826,6 +853,10 @@ nav.invert {
 
 nav.invert a {
   color: #222222 !important;
+}
+
+nav.invert li.active a {
+  color: #fff !important;
 }
 
 section.project {
@@ -865,7 +896,7 @@ section.project {
   width: 40px;
   line-height: 40px;
   border-radius: 30px;
-  background: #FFAB00;
+  background: #FFA600;
   color: #fff;
 }
 /*# sourceMappingURL=styles.css.map */
